--- a/readme.rm
+++ b/readme.rm
@@ -1,4 +1,4 @@
 Ejercicio de ejemplo
 
-<h2>IFCT0609 - Programación de sistemas informáticos</h2>
+IFCT0609 - Programación de sistemas informáticos
 
