--- a/readme.rm
+++ b/readme.rm
@@ -3,3 +3,5 @@ Ejercicio de ejemplo
 IFCT0609 - Programación de sistemas informáticos
 
 Great Job
+
+He entrado para probar que puedo hacer cambios como colaborador :) (Luis)
